--- a/genderbender/templates/genderbender/index.html
+++ b/genderbender/templates/genderbender/index.html
@@ -14,43 +14,44 @@
 
   </head>
 
-<!--   <body style="background-color: rgb(0, 191, 255)"> -->
   <body style="background-color: rgb(30, 30, 30)">
-  <nav class="navbar" style="background-color: rgb(30, 30, 30);">
-    <a style="color:rgb(230,60,100)"class="navbar-brand" href="#">Gender Bender</a>
-  </nav>
+
+    <!-- The navebar -->
+    <nav class="navbar" style="background-color: rgb(30, 30, 30);">
+      <a style="color:rgb(230,60,100)"
+          class="navbar-brand" 
+          href="#">Gender Bender</a>
+    </nav>
 
 
     <form class="col-md-8 mt-3 offset-2"  method='post' action={% url 'bend_input' %}>
+      
+      <!-- The core textbox -->
       <div class = "pt-3 pb-2">
         <textarea placeholder="Text..." name="string" cols="40" rows="5" 
-        style="resize:none;font-size: 30pt;border:none;background-color: rgb(30, 30, 30);
-        color:rgb(250, 250, 250)" class='form-control text-md'>{{bentString}}</textarea>
+          style="resize:none; font-size: 30pt; border:none;
+          background-color: rgb(30, 30, 30); color:rgb(250, 250, 250)" 
+          class='form-control text-md'>{{bentString}}</textarea>
       </div>
 
     
+      <!-- The year textbox -->
+      <div class="col pb-3 pt-3 col-md-6">
+        <input style="font-size: 16pt;border:none; 
+          background-color:rgb(30, 30, 30); color:rgb(200, 200, 200)" 
+          name="year" class='input-lg form-control input-group-lg' 
+          rows="5" value="{{year}}" placeholder="Year published (optional)">
+      </div>
 
-    <div class="col pb-3 pt-3 col-md-6">
-        <input style="font-size: 16pt;border:none;background-color: rgb(30, 30, 30);
-        color:rgb(200, 200, 200)" name="year" class='input-lg form-control input-group-lg' rows="5" value="{{year}}" placeholder="Year published (optional)">
-    </div>
-    <div class="col col-md-4 pt-0">
-        <button class="btn btn-block btn-lg" 
-        style="font-size: 16pt; background-color: rgb(230, 60, 100);color:rgb(255,255,255)"
+      <!-- The submit button -->
+      <div class="col col-md-4 pt-0">
+        <button class="btn btn-block btn-lg" style="font-size: 16pt; 
+        background-color: rgb(230, 60, 100);color:rgb(255,255,255)"
         type="submit">GenderBend!</button>
-    </div>
+      </div>
 
 
 
     {% csrf_token %}
     </form>
-
-    </div>
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-  
-
 </body></html>
