edited text color

--- a/genderbender/templates/genderbender/index.html
+++ b/genderbender/templates/genderbender/index.html
@@ -61,7 +61,7 @@
       <div class="col">
 
         <!-- The 'populate with' title -->
-        <div class="col-md-6 pb-3">Populate with:</div>
+        <div class="col-md-6 pb-3" style="color: rgb(100, 100, 100)">Populate with:</div>
         
         <!-- The pride and prejudice link -->
         <form  class="col-md-3" method='post' action={% url 'get_novel' %}>
